--- a/Optimi/en.lproj/Localizable.strings
+++ b/Optimi/en.lproj/Localizable.strings
@@ -7,98 +7,95 @@
 */
 
 // DeliveryView
-"CurrentScreen" = "Tela Atual";
-"Adicionar entrega" = "Adicionar entrega";
+"CurrentScreen" = "CurrentScreen";
+"Adicionar entrega" = "Add Delivery";
 
 // DeliveryCard
-"Implementação" = "Implementação";
-"Carregando feedbacks..." = "Carregando feedbacks...";
-"Adicionar Feedback" = "Adicionar Feedback";
-"Deletar feedback" = "Deletar feedback";
+"Implementação" = "Implementation";
+"Carregando feedbacks..." = "Loading feedbacks...";
+"Adicionar Feedback" = "Add Feedback";
+"Deletar feedback" = "Delete feedback";
 
-"Cor" = "Cor";
-"Espaçamento" = "Espaçamento";
-"Opacidade" = "Opacidade";
-"Alinhamento" = "Alinhamento";
-"Imagem" = "Imagem";
-"Tamanho" = "Tamanho";
+"Cor" = "Color";
+"Espaçamento" = "Spacing";
+"Opacidade" = "Opacity";
+"Alinhamento" = "Alignment";
+"Imagem" = "Image";
+"Tamanho" = "Size";
 
 // TaskView
-"Deadline" = "Prazo Final";
-"Entrar na Task" = "Entrar na Task";
-"Links Importantes" = "Links Importantes";
-"Protótipo" = "Protótipo";
-"Tarefa" = "Tarefa";
-"Responsáveis" = "Responsáveis";
-"Nenhum dev associado..." = "Nenhum dev associado...";
+"Deadline" = "Deadline";
+"Entrar na Task" = "Participate in the Task";
+"Links Importantes" = "Importants Links";
+"Protótipo" = "Prototype";
+"Tarefa" = "Task";
+"Responsáveis" = "Responsables";
+"Nenhum dev associado..." = "No associated developers...";
 
 
 // TaskCard
-"Deletar task" = "Deletar task";
+"Deletar task" = "Delete task";
 
 // OnBoardingView
-"Olá! Este é o Optimi!" = "Olá! Este é o Optimi!";
-"Seu Nome" = "Seu Nome";
-"Nome" = "Nome";
-"Cargo" = "Cargo";
-"Sair" = "Sair";
-"Salvar Perfil" = "Salvar Perfil";
-"Seu Nome" = "Seu Nome";
-"Salvar Perfil" = "Salvar Perfil";
+"Olá! Este é o Optimi!" = "Hi! This is the Optimi!";
+"Seu Nome" = "Your Name";
+"Nome" = "Name";
+"Cargo" = "Role";
+"Sair" = "Leave";
+"Salvar Perfil" = "Save Profile";
+"Seu Nome" = "Your Name";
 
 // CreateTaskView
-"Criar Task" = "Criar Task";
-"Nome da Task" = "Nome da Task";
-"Descrição da Task" = "Descrição da Task";
-"Descrição" = "Descrição";
-"Link do Protótipo" = "Link do Protótipo";
+"Criar Task" = "Create Task";
+"Nome da Task" = "Task Name";
+"Descrição da Task" = "Task Description";
+"Descrição" = "Description";
+"Link do Protótipo" = "Prototype Link";
 "Link" = "Link";
-"Cancelar" = "Cancelar";
-"Criar Task" = "Criar Task";
+"Cancelar" = "Cancel";
+"Criar Task" = "Create Task";
 
 // CreateDeliveryView
-"Criar Entrega" = "Criar Entrega";
-"Nome da Entrega" = "Nome da Entrega";
-"Descrição da Entrega" = "Descrição da Entrega";
-"Descrição"= "Descrição";
-"Link do Vídeo/Foto" = "Link do Vídeo/Foto";
+"Criar Entrega" = "Create Delivery";
+"Nome da Entrega" = "Delivery Name";
+"Descrição da Entrega" = "Delivery Description";
+"Link do Vídeo/Foto" = "Video/Photo Link";
 "Link" = "Link";
 
 // CreateProjectView
-"Crie o seu projeto" = "Crie o seu projeto";
-"Nome do Projeto" = "Nome do Projeto";
-"Projeto" = "Projeto";
-"Fechar" = "Fechar";
-"Criar Projeto" = "Criar Projeto";
+"Crie o seu projeto" = "Create your project";
+"Nome do Projeto" = "Project Name";
+"Projeto" = "Project";
+"Fechar" = "Close";
+"Criar Projeto" = "Create Project";
 
 // ProjectNotFoundView
-"Projeto não encontrado" = "Projeto não encontrado";
-"Confirme o Token do projeto" = "Confirme o Token do projeto";
-"Fechar" = "Fechar";
+"Projeto não encontrado" = "Project Not Found";
+"Confirme o Token do projeto" = "Confirm the project Token";
 
 // FeedbackGivingSheetView
-"Status da Entrega" = "Status da Entrega";
-"Enviar Feedback" = "Enviar Feedback";
+"Status da Entrega" = "Delivery Status";
+"Enviar Feedback" = "Send Feedback";
 
 // ProjectView
-"Carregando Tasks..." = "Carregando Tasks...";
-"Nenhuma Task Encontrada..." = "Nenhuma Task Encontrada...";
-"Selecione ou crie uma Task para começar" = "Selecione ou crie uma Task para começar";
+"Carregando Tasks..." = "Loading Tasks...";
+"Nenhuma Task Encontrada..." = "No Tasks Found...";
+"Selecione ou crie uma Task para começar" = "Select or create a Task to get started";
 
 // HomeView
-"Criar Projeto" = "Criar Projeto";
-"Token do Projeto" = "Token do Projeto";
-"Insira o token aqui" = "Insira o token aqui";
-"Entrar no Projeto" = "Entrar no Projeto";
+"Criar Projeto" = "Create Project";
+"Token do Projeto" = "Project Token";
+"Insira o token aqui" = "Insert token here";
+"Entrar no Projeto" = "Enter the Project";
 
 // AccountHomeDisplay
-"Nenhum Cargo" = "Nenhum Cargo";
-"Seu Nome" = "Seu Nome";
+"Nenhum Cargo" = "No Role";
+"Seu Nome" = "Your Name";
 
 
 // ======== GLOBAL =======
 // Status
-"Aprovada" = "Aprovada";
-"Revisão Pendente" = "Revisão Pendente"
-"Reprovada" = "Reprovada";
-"Em Andamento" = "Em Andamento";
+"Aprovada" = "Approved";
+"Revisão Pendente" = "Pending Review"
+"Reprovada" = "Reject";
+"Em Andamento" = "In progress";
