--- a/Optimi/pt-BR.lproj/Localizable.strings
+++ b/Optimi/pt-BR.lproj/Localizable.strings
@@ -97,6 +97,6 @@
 // ======== GLOBAL =======
 // Status
 "Aprovada" = "Aprovada";
-"Revisão Pendente" = "Revisão Pendente"
+"Revisão Pendente" = "Revisão Pendente";
 "Reprovada" = "Reprovada";
 "Em Andamento" = "Em Andamento";
