--- a/Optimi/en.lproj/Localizable.strings
+++ b/Optimi/en.lproj/Localizable.strings
@@ -8,7 +8,7 @@
 
 // DeliveryView
 "CurrentScreen" = "CurrentScreen";
-"Adicionar entrega" = "Add Delivery";
+"Adicionar entrega" = "Add delivery";
 
 // DeliveryCard
 "Implementação" = "Implementation";
@@ -25,11 +25,11 @@
 
 // TaskView
 "Deadline" = "Deadline";
-"Entrar na Task" = "Participate in the Task";
-"Links Importantes" = "Importants Links";
+"Entrar na Task" = "Participate in Task";
+"Links Importantes" = "Important Links";
 "Protótipo" = "Prototype";
 "Tarefa" = "Task";
-"Responsáveis" = "Responsables";
+"Responsáveis" = "Responsable";
 "Nenhum dev associado..." = "No associated developers...";
 
 
@@ -37,7 +37,7 @@
 "Deletar task" = "Delete task";
 
 // OnBoardingView
-"Olá! Este é o Optimi!" = "Hi! This is the Optimi!";
+"Olá! Este é o Optimi!" = "Hi! This is Optimi!";
 "Seu Nome" = "Your Name";
 "Nome" = "Name";
 "Cargo" = "Role";
@@ -70,8 +70,8 @@
 "Criar Projeto" = "Create Project";
 
 // ProjectNotFoundView
-"Projeto não encontrado" = "Project Not Found";
-"Confirme o Token do projeto" = "Confirm the project Token";
+"Projeto não encontrado" = "Project not found";
+"Confirme o Token do projeto" = "Confirm project Token";
 
 // FeedbackGivingSheetView
 "Status da Entrega" = "Delivery Status";
@@ -97,5 +97,5 @@
 // Status
 "Aprovada" = "Approved";
 "Revisão Pendente" = "Pending Review";
-"Reprovada" = "Reject";
+"Reprovada" = "Rejected";
 "Em Andamento" = "In progress";
